--- a/public/less/branding/checkbox.less
+++ b/public/less/branding/checkbox.less
@@ -21,9 +21,9 @@
     display: inline-block;
   }
   label {
-    margin-top: 8px;
+    margin-top: 0px;
     margin-left: 10px;
-    margin-bottom: 8px;
+    margin-bottom: 13px;
     line-height: 16px;
   }
 }
