--- a/public/less/companybranding.less
+++ b/public/less/companybranding.less
@@ -8,13 +8,14 @@
     width: 100%;
   }
 
-	.branding-container {
-    width:723px;
-		border: 2px solid #eee;
-		display:inline-block;
-		background-color:white;
-    padding:25px;
-	}
+  .branding-container {
+      width:723px;
+      border: 2px solid #eee;
+      display:inline-block;
+      background-color:white;
+      padding:25px;
+      margin-top:8px;
+  }
 
   div.option label {
     font-size: 17px;
@@ -28,7 +29,7 @@
  .checkbox-box {
     vertical-align : top;
     .checkbox {
-      margin-top:10px;
+      margin-top:5px;
       vertical-align: top;
     }
 
@@ -56,7 +57,7 @@
   .logocustomise {
     padding-left: 23px;
     padding-right: 30px;
-    padding-top: 5px;
+    padding-bottom: 10px;
   }
 
   .sample {
