--- a/public/less/lists.less
+++ b/public/less/lists.less
@@ -93,7 +93,7 @@
 
   .col {
         margin: 0 20px;
-        padding-top: 28px;
+        padding-top: 5px;
         padding-bottom: 14px;
         max-width: 800px;
         &.float-right {
